syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.vladigeras.springgrpc.api";

service CountryApiService {
  rpc Create (CreateCountryRq) returns (CreateCountryRs) {
  }
}

message CreateCountryRq {
  string title = 1;
}

message CreateCountryRs {
  int64 id = 1;
}